# wei-server

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/routes/: image.rs  index.rs  mod.rs  model.rs  run.rs  setting.rs  task.rs  user.rs
