[package]
name = "wei-server"
version = "0.1.0"
edition = "2021"
description = "wei api"
documentation = "https://github.com/zuiyue-com/wei-server"
homepage = "https://github.com/zuiyue-com/wei-server"
license = "MIT OR Apache-2.0"

[dependencies]
wei-env = "0.2.10"
single-instance = "0.3"
axum = "0.6.20"
tokio = { version = "1", features = ["full"] }