[package]
name = "wei-server"
version = "0.1.3"
edition = "2021"
description = "wei api"
documentation = "https://github.com/zuiyue-com/wei-server"
homepage = "https://github.com/zuiyue-com/wei-server"
license = "MIT OR Apache-2.0"

[dependencies]
wei-env = "0.2.10"
wei-run = "0.2.2"
serde_json = "1"
single-instance = "0.3"
axum = "0.6.20"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.4.4", features = ["cors"] } 