[package]
name = "wei-server"
version = "0.1.3"
edition = "2021"
description = "wei api"
documentation = "https://github.com/zuiyue-com/wei-server"
homepage = "https://github.com/zuiyue-com/wei-server"
license = "MIT OR Apache-2.0"

[dependencies]
wei-env = "0.2.10"
wei-run = "0.2.4"
# wei-log = "0.2.8"
serde = "1"
serde_json = "1"
single-instance = "0.3"
axum = "0.6.20"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.4.4", features = ["full"] } #"cors", "fs", "add_extension"
hyper = "0.14.27"
hyper-tls = "0.5.0"
flate2 = "1.0.28"
async-process = "1.8.1"
